applications/etl-stack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: graph-system
